// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Option select container should render a description when supplied 1`] = `
<div
  class="app-c-option-select js-collapsible"
>
  <button
    aria-controls="title-options"
    aria-expanded="true"
    class="js-container-head"
    type="button"
  >
    <div
      class="option-select-label"
      id="title-label"
    >
      Title
    </div>
    <div
      class="js-selected-counter"
    >
      description
    </div>
  </button>
  <div
    aria-labelledby="title-label"
    class="options-container options-container--hod"
    id="title-options"
    role="group"
  >
    <div
      class="js-auto-height-inner"
    >
      CONTENT SHOULD BE VISIBLE
    </div>
  </div>
</div>
`;

exports[`Option select container should render all required values and be open by default 1`] = `
<div
  class="app-c-option-select js-collapsible"
>
  <button
    aria-controls="title-options"
    aria-expanded="true"
    class="js-container-head"
    type="button"
  >
    <div
      class="option-select-label"
      id="title-label"
    >
      Title
    </div>
    <div
      class="js-selected-counter"
    />
  </button>
  <div
    aria-labelledby="title-label"
    class="options-container options-container--hod"
    id="title-options"
    role="group"
  >
    <div
      class="js-auto-height-inner"
    >
      CONTENT SHOULD BE VISIBLE
    </div>
  </div>
</div>
`;

exports[`Option select container with Checked Options should render them as checked when specified 1`] = `
<div
  class="app-c-option-select js-collapsible"
>
  <button
    aria-controls="title-options"
    aria-expanded="true"
    class="js-container-head"
    type="button"
  >
    <div
      class="option-select-label"
      id="title-label"
    >
      Title
    </div>
    <div
      class="js-selected-counter"
    >
      description
    </div>
  </button>
  <div
    aria-labelledby="title-label"
    class="options-container options-container--hod"
    id="title-options"
    role="group"
  >
    <div
      class="js-auto-height-inner"
    >
      <div
        class="multiple-choice"
      >
        <input
          id="1"
          name="name"
          type="checkbox"
          value="1"
        />
        <label
          for="1"
        >
          1 CONTENT SHOULD BE VISIBLE
        </label>
      </div>
      <div
        class="multiple-choice"
      >
        <input
          checked=""
          id="2"
          name="name"
          type="checkbox"
          value="2"
        />
        <label
          for="2"
        >
          2 CONTENT SHOULD BE VISIBLE
        </label>
      </div>
      <div
        class="multiple-choice"
      >
        <input
          id="3"
          name="name"
          type="checkbox"
          value="3"
        />
        <label
          for="3"
        >
          3 CONTENT SHOULD BE VISIBLE
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Option select container with Checked Options should render them as unchecked by default 1`] = `
<div
  class="app-c-option-select js-collapsible"
>
  <button
    aria-controls="title-options"
    aria-expanded="true"
    class="js-container-head"
    type="button"
  >
    <div
      class="option-select-label"
      id="title-label"
    >
      Title
    </div>
    <div
      class="js-selected-counter"
    >
      description
    </div>
  </button>
  <div
    aria-labelledby="title-label"
    class="options-container options-container--hod"
    id="title-options"
    role="group"
  >
    <div
      class="js-auto-height-inner"
    >
      <div
        class="multiple-choice"
      >
        <input
          id="1"
          name="name"
          type="checkbox"
          value="1"
        />
        <label
          for="1"
        >
          1 CONTENT SHOULD BE VISIBLE
        </label>
      </div>
      <div
        class="multiple-choice"
      >
        <input
          id="2"
          name="name"
          type="checkbox"
          value="2"
        />
        <label
          for="2"
        >
          2 CONTENT SHOULD BE VISIBLE
        </label>
      </div>
      <div
        class="multiple-choice"
      >
        <input
          id="3"
          name="name"
          type="checkbox"
          value="3"
        />
        <label
          for="3"
        >
          3 CONTENT SHOULD BE VISIBLE
        </label>
      </div>
    </div>
  </div>
</div>
`;
